# ProctorTool

./: .gitignore  README.md  start.ps1  start.sh  stop.sh
backend/: package-lock.json  package.json  server.js
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AdminDashboard.jsx  CreateTest.jsx  ExamRoom.jsx  JoinTest.jsx  Landing.jsx  Results.jsx
ml-service/: app.py  requirements.txt
ml_service/: api.py  pyproject.toml  requirements.txt  rule_engine.py  rules.json  setup.cfg
ml_service/proctor_ml/: main.py
ml_service/proctor_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
novelProctorDashboard/: index.html  package-lock.json  package.json
novelProctorDashboard/src/: App.css  App.jsx  index.css
services/gateway/: main.py
