# pyproject.toml for Proctor ML package
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proctor-ml"
version = "0.1.0"
description = "Ultra‑low‑latency proctoring ML service (YuNet, 6DRepNet, YOLO)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "ProctorTool Team", email = "dev@example.com"}]
keywords = ["proctoring", "ml", "fastapi", "yolov", "yolov11", "yuNet", "6DRepNet"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Runtime dependencies
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "opencv-python",
    "pillow",
    "numpy",
    "ultralytics",
    "torch>=2.0; platform_machine != 'arm64'",
    # sixdrepnet is optional; we import lazily
]

[project.optional-dependencies]
# Users can install with `pip install proctor-ml[sixdrepnet]` to get the optional head pose model
sixdrepnet = ["sixdrepnet"]

[project.scripts]
proctor-ml-server = "proctor_ml.main:run"

[project.urls]
Homepage = "https://github.com/yourorg/proctor-ml"
