[metadata]
name = proctor-ml
version = 0.1.0
description = Ultra‑low‑latency proctoring ML service (YuNet, 6DRepNet, YOLO)
author = ProctorTool Team
author_email = dev@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    fastapi
    uvicorn[standard]
    opencv-python
    pillow
    numpy
    ultralytics
    torch>=2.0; platform_machine != 'arm64'

[options.extras_require]
sixdrepnet = sixdrepnet

[options.entry_points]
console_scripts =
    proctor-ml-server = proctor_ml.main:run
